# ProjectThreads

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: FileManager.h
src/: FileManager.cpp  ProjectThreadsConfig.h.in  main.cpp
